clusters/home/infrastructure/flux-webhook/acme-solver-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: flux-github-webhook
  name: allow-acme-http01-solver
  namespace: flux-system
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8089
          protocol: TCP
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
